--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@
 }
 
 .mask-custom {
-  background: rgba(24, 24, 16, 0.2) ;
+  background: rgba(24, 24, 16, 0.2) !important;
   border-radius: 2em;
   backdrop-filter: blur(15px);
   border: 2px solid rgba(255, 255, 255, 0.05);
