--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,11 +20,11 @@
 }
 
 .mask-custom {
-  background: rgba(24, 24, 16, 0.2) !important;
+  background: rgba(24, 24, 16, 0.3) !important;
   border-radius: 2em;
   backdrop-filter: blur(15px);
   border: 2px solid rgba(255, 255, 255, 0.05);
   background-clip: padding-box;
   box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
-  color: black;
+  color: white;
 }
